package com.lthaoshao.pattern.proxy.simple;

/**
 * <p>  </p>
 *
 * @author lthaoshao
 * @version V1.0
 * @date 2019/7/29 23:06
 */
public interface Subject {
    /**
     * 操作
     */
    void operation();
}
